--- a/templates/cliente/agendamentos.html
+++ b/templates/cliente/agendamentos.html
@@ -21,8 +21,8 @@
             <a href="/"><img src="../../static/imgs/Logo.png" alt="Logo AgendeJá" class="h-12 w-auto"/></a>
         </div>
         <nav class="hidden md:flex space-x-6">
-            <a href="/servicos" class="text-gray-600 hover:text-blue-600">Serviços</a>
-            <a href="/profissionais" class="text-gray-600 hover:text-blue-600">Profissionais</a>
+            <a href="/servicos/1" class="text-gray-600 hover:text-blue-600">Serviços</a>
+            <a href="/profissionais/1" class="text-gray-600 hover:text-blue-600">Profissionais</a>
             <a href="/sobre" class="text-gray-600 hover:text-blue-600">Sobre Nós</a>
             <a href="/contato" class="text-gray-600 hover:text-blue-600">Contato</a>
         </nav>
@@ -126,7 +126,7 @@
                 <div class="bg-white rounded-lg shadow-md p-8 text-center">
                     <i class="fas fa-calendar-times text-5xl text-gray-300 mb-4"></i>
                     <h3 class="text-xl font-bold text-gray-700 mb-2">Nenhum agendamento futuro</h3>
-                    <a href="/servicos" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg transition inline-block">Agendar um serviço</a>
+                    <a href="/servicos/1" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg transition inline-block">Agendar um serviço</a>
                 </div>
             {% endif %}
         </div>
