--- a/templates/profissional/Individual.html
+++ b/templates/profissional/Individual.html
@@ -24,8 +24,8 @@
             <a href="/"><img src="../../static/imgs/Logo.png" alt="Logo AgendeJá" class="h-12 w-auto"/></a>
         </div>
         <nav class="hidden md:flex space-x-6">
-            <a href="/servicos" class="text-gray-600 hover:text-blue-600">Serviços</a>
-            <a href="/profissionais" class="text-gray-600 hover:text-blue-600">Profissionais</a>
+            <a href="/servicos/1" class="text-gray-600 hover:text-blue-600">Serviços</a>
+            <a href="/profissionais/1" class="text-gray-600 hover:text-blue-600">Profissionais</a>
             <a href="/sobre" class="text-gray-600 hover:text-blue-600">Sobre Nós</a>
             <a href="/contato" class="text-gray-600 hover:text-blue-600">Contato</a>
         </nav>
@@ -115,7 +115,7 @@
                 <li>
                     <div class="flex items-center">
                         <i class="fas fa-chevron-right text-gray-400 mx-2 text-xs"></i>
-                        <a href="/profissionais" class="text-sm text-gray-600 hover:text-blue-600">Profissionais</a>
+                        <a href="/profissionais/1" class="text-sm text-gray-600 hover:text-blue-600">Profissionais</a>
                     </div>
                 </li>
                 <li aria-current="page">
@@ -535,8 +535,8 @@
                 <h4 class="text-lg font-bold mb-4">Links Úteis</h4>
                 <ul class="space-y-2">
                     <li><a href="/" class="text-gray-400 hover:text-white">Início</a></li>
-                    <li><a href="/servicos" class="text-gray-400 hover:text-white">Serviços</a></li>
-                    <li><a href="/profissionais" class="text-gray-400 hover:text-white">Profissionais</a></li>
+                    <li><a href="/servicos/1" class="text-gray-400 hover:text-white">Serviços</a></li>
+                    <li><a href="/profissionais/1" class="text-gray-400 hover:text-white">Profissionais</a></li>
                     <li><a href="/sobre" class="text-gray-400 hover:text-white">Sobre Nós</a></li>
                 </ul>
             </div>
@@ -544,8 +544,8 @@
             <div>
                 <h4 class="text-lg font-bold mb-4">Suporte</h4>
                 <ul class="space-y-2">
-                    <li><a href="../contato.html" class="text-gray-400 hover:text-white">Contato</a></li>
-                    <li><a href="../contato.html" class="text-gray-400 hover:text-white">Perguntas Frequentes</a></li>
+                    <li><a href=./contato" class="text-gray-400 hover:text-white">Contato</a></li>
+                    <li><a href="/contato" class="text-gray-400 hover:text-white">Perguntas Frequentes</a></li>
                 </ul>
             </div>
 
@@ -557,13 +557,6 @@
                     <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
                     <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <p class="mt-4 text-gray-400">Assine nossa newsletter</p>
-                <div class="mt-2 flex">
-                    <input type="email" placeholder="Seu e-mail" class="px-3 py-2 rounded-l text-gray-800 w-full">
-                    <button class="bg-blue-600 hover:bg-blue-700 px-4 rounded-r">
-                        <i class="fas fa-paper-plane"></i>
-                    </button>
-                </div>
             </div>
         </div>
         <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400">
@@ -571,7 +564,6 @@
         </div>
     </div>
 </footer>
-
 <!-- Scripts -->
 <script>
     // Menu mobile (simplificado)
