--- a/templates/profissional/editar.html
+++ b/templates/profissional/editar.html
@@ -377,8 +377,8 @@
                 <h4 class="text-lg font-bold mb-4">Links Úteis</h4>
                 <ul class="space-y-2">
                     <li><a href="/" class="text-gray-400 hover:text-white">Início</a></li>
-                    <li><a href="/servicos" class="text-gray-400 hover:text-white">Serviços</a></li>
-                    <li><a href="/profissionais" class="text-gray-400 hover:text-white">Profissionais</a></li>
+                    <li><a href="/servicos/1" class="text-gray-400 hover:text-white">Serviços</a></li>
+                    <li><a href="/profissionais/1" class="text-gray-400 hover:text-white">Profissionais</a></li>
                     <li><a href="/sobre" class="text-gray-400 hover:text-white">Sobre Nós</a></li>
                 </ul>
             </div>
@@ -386,8 +386,8 @@
             <div>
                 <h4 class="text-lg font-bold mb-4">Suporte</h4>
                 <ul class="space-y-2">
-                    <li><a href="../contato.html" class="text-gray-400 hover:text-white">Contato</a></li>
-                    <li><a href="../contato.html" class="text-gray-400 hover:text-white">Perguntas Frequentes</a></li>
+                    <li><a href=./contato" class="text-gray-400 hover:text-white">Contato</a></li>
+                    <li><a href="/contato" class="text-gray-400 hover:text-white">Perguntas Frequentes</a></li>
                 </ul>
             </div>
 
@@ -398,13 +398,6 @@
                     <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
                     <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
-                </div>
-                <p class="mt-4 text-gray-400">Assine nossa newsletter</p>
-                <div class="mt-2 flex">
-                    <input type="email" placeholder="Seu e-mail" class="px-3 py-2 rounded-l text-gray-800 w-full">
-                    <button class="bg-blue-600 hover:bg-blue-700 px-4 rounded-r">
-                        <i class="fas fa-paper-plane"></i>
-                    </button>
                 </div>
             </div>
         </div>
