--- a/templates/profissional/gestao.html
+++ b/templates/profissional/gestao.html
@@ -205,8 +205,8 @@
                 <h4 class="text-lg font-bold mb-4">Links Úteis</h4>
                 <ul class="space-y-2">
                     <li><a href="/" class="text-gray-400 hover:text-white">Início</a></li>
-                    <li><a href="/servicos" class="text-gray-400 hover:text-white">Serviços</a></li>
-                    <li><a href="/profissionais" class="text-gray-400 hover:text-white">Profissionais</a></li>
+                    <li><a href="/agendamentos" class="text-gray-400 hover:text-white">Agendamentos</a></li>
+                    <li><a href="/editarProfissional" class="text-gray-400 hover:text-white">Meu perfil</a></li>
                     <li><a href="/sobre" class="text-gray-400 hover:text-white">Sobre Nós</a></li>
                 </ul>
             </div>
